kustomize/overlays/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  labels:
    app.kubernetes.io/instance: go-hello-world
    app.kubernetes.io/name: go-hello-world
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: true
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${ARGOCD_ENV_ingress_host}.${ingress_fqdn}
    secretName: hello-world-tls
  rules:
  - host: ${ARGOCD_ENV_ingress_host}.${ARGOCD_ENV_ingress_fqdn}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-hello-world
            port:
              number: 80
